--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <link rel="shortcut icon" type="image/x-icon" href="public/favicon.ico">
   We're just a small group of developers working on apps as Atpsoft LLC.<br/>
-<img src="public/atplogo.png">
+<img src="public/atplogo.png" alt="Adenosine TriPhosphate">
