--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <link rel="shortcut icon" type="image/x-icon" href="public/favicon.ico">
-  We're just a small group of developers working on apps as Atpsoft LLC.<br/>
+We're just a small group of developers working on apps as ATPSoft, LLC.<br/>
+Our name is inspired by the <a href="https://en.wikipedia.org/wiki/Adenosine_triphosphate">ATP molecule</a>.<br/>
 <img src="public/atplogo.png" alt="Adenosine TriPhosphate">
