--- a/jade-tasks.html
+++ b/jade-tasks.html
@@ -1,2 +1,2 @@
-This is an app we developed for ourselves to minimize the time spent managing tasks.
+This is an app we developed for ourselves to minimize the time spent managing tasks. <br />
 Hopefully you find it helpful too.
