--- a/jade-arithmetic.html
+++ b/jade-arithmetic.html
@@ -1,5 +1,5 @@
 This is an app we developed in order to help our children learn arithmetic.<br />
 Hopefully you find it helpful too.<br />
 
-Here is a link to it on the app store: <a href="https://itunes.apple.com/us/app/jade-arithmetic/????">Jade
+Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-arithmetic/id1667200478">Jade
   Arithmetic</a><br />
