--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,4 @@
-We've just got one app right now:
-
-Jade Arithmetic: <a href="http://atpsoft.com/jade-arithmetic.html">http://atpsoft.com/jade-arithmetic.html</a> <br />
-coming soon:<br />
+We've just got two apps right now:<br/>
+<br/>
 Jade Tasks: <a href="http://atpsoft.com/jade-tasks.html">http://atpsoft.com/jade-tasks.html</a> <br />
+Jade Arithmetic: <a href="http://atpsoft.com/jade-arithmetic.html">http://atpsoft.com/jade-arithmetic.html</a> <br />
