--- a/jade-arithmetic.html
+++ b/jade-arithmetic.html
@@ -1,5 +1,11 @@
 This is an app we developed in order to help our children learn arithmetic.<br />
-Hopefully you find it helpful too.<br />
-
+<br/>
+It will let you practice and improve your arithmetic skills -- multiplication, division, addition, and subtraction.<br/>
+<br/>
+We designed and built it for our kids, and hope that many others will use it.  It is ad-free, and will remain so.<br/>
+<br/>
+We are just getting started, and have many new features planned.  Please let us know what would be useful to your family, school, or homeschool group.<br/>
+<br/>
+<br/>
 Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-arithmetic/id1667200478">Jade
   Arithmetic</a><br />
