add link to app store

--- a/jade-tasks.html
+++ b/jade-tasks.html
@@ -8,3 +8,6 @@ We know there are plentiful to-do list apps available already with satisfied cus
 <br/>
 This is an app we developed for ourselves to minimize the time spent managing tasks. <br />
 Hopefully you find it helpful too.
+
+Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-tasks/id1639946142">Jade
+  Tasks</a><br />
