--- a/jade-tasks.html
+++ b/jade-tasks.html
@@ -7,7 +7,7 @@ These two purposes are fulfilled in large part by the Today tab for immediately 
 We know there are plentiful to-do list apps available already with satisfied customers.  But if you're not one of them, please install JadeTasks.  Give it a try: offer suggestions, request features, complain about bugs.  Help us make it as useful for you as it is for us.  We will be listening.<br/>
 <br/>
 This is an app we developed for ourselves to minimize the time spent managing tasks. <br />
-Hopefully you find it helpful too.
-
+Hopefully you find it helpful too.<br/>
+<br/>
 Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-tasks/id1639946142">Jade
   Tasks</a><br />
