add campaign links for apps

--- a/jade-arithmetic.html
+++ b/jade-arithmetic.html
@@ -7,5 +7,5 @@ We designed and built it for our kids, and hope that many others will use it.  I
 We are just getting started, and have many new features planned.  Please let us know what would be useful to your family, school, or homeschool group.<br/>
 <br/>
 <br/>
-Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-arithmetic/id1667200478">Jade
+Here is a link to it on the app store: <a href="https://apps.apple.com/app/apple-store/id1667200478?pt=119369382&ct=atpsoft.com&mt=8">Jade
   Arithmetic</a><br />
