--- a/jade-tasks.html
+++ b/jade-tasks.html
@@ -9,5 +9,5 @@ We know there are plentiful to-do list apps available already with satisfied cus
 This is an app we developed for ourselves to minimize the time spent managing tasks. <br />
 Hopefully you find it helpful too.<br/>
 <br/>
-Here is a link to it on the app store: <a href="https://apps.apple.com/us/app/jade-tasks/id1639946142">Jade
+Here is a link to it on the app store: <a href="https://apps.apple.com/app/apple-store/id1639946142?pt=119369382&ct=atpsoft.com&mt=8">Jade
   Tasks</a><br />
